crates/keron-lang/tests/corpus/errors/check/for_inner_val_shadows_loop_var.keron
val xs: List<Int> = [1, 2]
for x in xs {
  val x: Int = 99
  reconcile x
}
